# PSB-hackathon-demo

./: .gitignore  README.md  demo.ipynb  pitch.html  pyproject.toml  quickstart.py
agent/: Cargo.toml  build.sh
agent/src/: lib.rs
src/cit/: __init__.py  edge.py  engine.py  features.py  telemetry.py
web/: agent.wasm  live.html  model.json
