[project]
name = "continuous-identity-trust"
version = "0.1.0"
description = "Continuous behavioural-biometrics risk engine — hackathon prototype"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.11.0",
    "numpy>=2.5.0",
    "pandas>=3.0.3",
    "polars>=1.42.0",
    "scikit-learn>=1.9.0",
]

[dependency-groups]
dev = [
    "ipykernel>=7.3.0",
    "jupyter>=1.1.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cit"]
